@@ -1,3 +1,9 @@
+2010-05-03  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Headers/Foundation/NSString.h,
+	* Source/NSString.m: Add 10.4 write methods.
+	Fixes part of bug report #29736.
+
 2010-05-02  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Headers/Foundation/NSString.h,
